--- a/src/app/shared/layout/layout-components/home-header/home-header.component.html
+++ b/src/app/shared/layout/layout-components/home-header/home-header.component.html
@@ -2,7 +2,7 @@
     <div id="topbar">
         <div class="header w-75 d-flex">
             <div class="header--buttons">
-                <button class="header--button previous">
+                <button class="header--button previous" [routerLink]="['/user/home']">
                     <i class="fa fa-angle-left"></i>
                 </button>
                 <button class="header--button next">
