--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -1,4 +1,50 @@
+<header>
+    <div id="topbar">
+        <div class="header w-75 d-flex">
+            <div class="header--buttons">
+                <button class="header--button previous" [routerLink]="['/user/home']">
+                    <i class="fa fa-angle-left"></i>
+                </button>
+                <button class="header--button next">
+                    <i class="fa fa-angle-right"></i>
+                </button>
+            </div>
 
+            <div id="search" class="ms-5">
+                <input id="inputSearch" type="search" name="search" (keyup)="search(searchTerm.value)"
+                    (keydown.backspace)="search(searchTerm.value)" #searchTerm
+                    placeholder="Search for song,artists etc..." />
+                <i id="search-icon" class="fa fa-search"></i>
+            </div>
+        </div>
+
+        <div id="right">
+            <i class="fa fa-bell"></i>
+            <div class="menu-wrap">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <i id="cog-icon" class="fa fa-cog"></i>
+
+                        <ul class="drop-menu">
+                            <li class="drop-menu-item">
+                                <a href="#">Page 1</a>
+                            </li>
+                            <li class="drop-menu-item">
+                                <a href="#">Page 2</a>
+                            </li>
+                            <li class="drop-menu-item">
+                                <a href="#">Page 3</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <button class="btnk">Don't Click here</button>
+        </div>
+    </div>
+</header>
+
+<!-- 
 <section class="section">
     <h2 class="title">Your top genres</h2>
     <div class="section--body">
@@ -15,8 +61,8 @@
             </a>
         </div>
     </div>
-</section>
-<section class="section">
+</section> -->
+<!-- <section class="section">
     <h2 class="title">Browse all</h2>
     <div class="section--body">
         <div class="section--body--item category--item">
@@ -40,4 +86,52 @@
             </a>
         </div>
     </div>
+</section> -->
+
+
+
+<section class="search-section">
+    <div class="search-section__search-item-container">
+        <div class="search-section__artists-container"
+            [ngClass]="moreArtists ? 'show' : 'search-section__artists-container--hide'" *ngIf="artistsList.length > 0">
+            <div class="search-section__title-container">
+                <h2 class="search-section__title">{{ "search.artist-title" }}</h2>
+            </div>
+            <button class="btn-template search-section__btn" 
+                (click)="seeMoreArtists()">{{ "search.more-btn"}}
+            </button>
+            <div class="search-section__search-item container">
+                <div class="row">
+                    <app-search-artist-item class="col-2 m-2" 
+                        [artist]="artist" *ngFor="let artist of artistsList">
+                    </app-search-artist-item>
+                </div>
+            </div>
+        </div>
+        <div class="search-section__tracks-container"
+            [ngClass]="moreTracks ? 'show' : 'search-section__tracks-container--hide'" *ngIf="tracksList.length > 0">
+            <div class="search-section__title-container">
+                <h2 class="search-section__title">{{ "search.tracks-title"}}</h2>
+            </div>
+            <button class="btn-template search-section__btn" (click)="seeMoreTracks()">{{ "search.more-btn"}}</button>
+            <div class="search-section__search-item container">
+                <div class="row">
+                    <app-search-track-item class="col-2" [track]="track" *ngFor="let track of tracksList">
+                    </app-search-track-item>
+                </div>
+            </div>
+        </div>
+        <div class="search-section__float-btn-container" *ngIf="moreArtists || moreTracks">
+            <a class="float-btn" (click)="scrollTo('searchId')">
+                <span class="fas fa-chevron-up float-btn-icon"></span>
+            </a>
+        </div>
+    </div>
 </section>
+
+<app-search-modal [(showModal)]="showModal">
+    <div class="modal-body">
+        <h4>{{ "modal.body"}}</h4>
+        <button class="btn-template search-section__btn" routerLink="/search">{{ "modal.search-btn" }}</button>
+    </div>
+</app-search-modal>
