--- a/src/app/shared/layout/layout-structures/page-search-layout/page-search-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-search-layout/page-search-layout.component.html
@@ -5,7 +5,7 @@
             <app-dashboard></app-dashboard>
         </div>
         <div class="col-md-10 py-3 home">
-            <app-home-header></app-home-header>
+            <!-- <app-home-header></app-home-header> -->
             <router-outlet></router-outlet>
         </div>
     </div>
