--- a/src/app/shared/layout/layout-structures/page-album-layout/page-album-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-album-layout/page-album-layout.component.html
@@ -4,7 +4,7 @@
             <app-dashboard></app-dashboard>
         </div>
         <div class="col-md-10 py-3 px-0 home">
-            <app-home-header></app-home-header>
+            <!-- <app-home-header></app-home-header> -->
             <router-outlet></router-outlet>
         </div>
     </div>
