--- a/src/app/features/user/artist/page-artist/page-artist.component.html
+++ b/src/app/features/user/artist/page-artist/page-artist.component.html
@@ -1,59 +1,75 @@
-<section id="artistId" class="artist-section animated fadeIn" *ngIf="artist != null">
+<section id="artistId" class="artist-section animate__animated fadeIn" *ngIf="artist != null">
     <div class="artist-section__header-container">
-        <div class="artist-section__btn-container">
+        <!-- <div class="artist-section__btn-container">
             <button class="back-btn" role="button" type="button" [routerLink]="['/search']">
                 <img src="assets/img/left-arrow.svg" alt="left arrow image">
             </button>
-        </div>
+        </div> -->
         <div class="artist-section__header-img-container">
             <img class="artist-section__header-img" [src]="artist.images | errorImage" [alt]="artist.name">
         </div>
         <div class="artist-section__name-container">
-            <h2 class="artist-section__name">{{ artist.name }}</h2>
+            <h2 class="artist-section__name">
+                {{ artist.name }}
+            </h2>
         </div>
         <div class="artist-section__followers-container">
-            <span>{{ artist.followers.total }} {{ "artist.followers" }}</span>
+            <span>
+                {{ artist.followers.total }} monthly listeners
+            </span>
         </div>
         <div class="artist-section__profile-btn-container">
-            <a class="btn-template" [href]="artist.external_urls.spotify"
-                target="_blank">{{ "artist.profile-btn"}}</a>
+            <a class="btn-template" [href]="artist.external_urls.spotify" target="_blank">
+                {{ "artist.profile-btn"}}
+            </a>
         </div>
     </div>
     <div class="artist-section__main-container">
         <div class="artist-section__btn-container">
             <!-- <button class="artist-section__general-btn artist-section__btn" routerLinkActive="activate-link"
                 [routerLink]="['/artist', artistId]">Overview</button> -->
-            <h3 class="artist-section__btn-title">{{ "artist.overview" }}</h3>
+            <h3 class="artist-section__btn-title">
+                {{ "artist.overview" }}
+            </h3>
         </div>
         <div class="artist-section__top-tracks-container"
-        [ngClass]="moreTracks ? 'show' : 'artist-section__top-tracks-container--hide'">
-            <h2 class="artist-section__top-tracks-title">{{ 'artist.title' }}</h2>
+            [ngClass]="moreTracks ? 'show' : 'artist-section__top-tracks-container--hide'">
+            <h2 class="artist-section__top-tracks-title">
+                Popular{{ 'artist.title' }}
+            </h2>
             <div class="artist-section__see-more-container">
-                <button class="btn-template" 
-                (click)="seeMoreTracks()"
-                >{{ "artist.more-btn" }}</button>
-            </div>            
+                <button class="btn-template" (click)="seeMoreTracks()">
+                    {{ "artist.more-btn" }}
+                </button>
+            </div>
             <div class="artist-section__top-tracks-list-container" *ngIf="topTracks.length > 0">
                 <ul class="artist-section__top-tracks-list">
                     <app-artist-top-track [topTrack]="topTrack" *ngFor="let topTrack of topTracks">
                     </app-artist-top-track>
                 </ul>
-            </div>            
+            </div>
         </div>
-        <div class="artist-section__albums-container" 
-        [ngClass]="moreAlbums ? 'show' : 'artist-section__albums-container--hide'">
-            <h2 class="artist-section__albums-title">{{ "artist.album-title" }}</h2>
-            <button class="btn-template" 
-            (click)="seeMoreAlbums()"
-            >{{ "artist.more-btn" }}</button>
+        <div class="artist-section__albums-container"
+            [ngClass]="moreAlbums ? 'show' : 'artist-section__albums-container--hide'">
+            <h2 class="artist-section__albums-title">
+                Featuring {{ artist.name }}
+            </h2>
+            <button class="btn-template" (click)="seeMoreAlbums()">
+                SEE ALL
+
+            </button>
             <div class="artist-section__albums-list-container" *ngIf="albums.length > 0">
-                <app-artist-albums [album]="album" *ngFor="let album of albums"></app-artist-albums>
+                <app-artist-albums [album]="album" *ngFor="let album of albums">
+
+                </app-artist-albums>
             </div>
         </div>
         <div class="artist-section__float-btn-container" *ngIf="moreAlbums || moreTracks">
             <a class="float-btn" (click)="scrollTo('artistId')">
-              <span class="fas fa-chevron-up float-btn-icon"></span>
+                <span class="fas fa-chevron-up float-btn-icon">
+
+                </span>
             </a>
-        </div>   
+        </div>
     </div>
 </section>
