--- a/src/app/features/user/search/page-search/page-search.component.scss
+++ b/src/app/features/user/search/page-search/page-search.component.scss
@@ -1,4 +1,7 @@
-.header--button {
+.searchPage_container {
+    min-height: 100%;
+}
+.nav_btn {
     background: var(--button-bg);
     color: #fff;
     border: 0;
@@ -8,27 +11,26 @@
     cursor: pointer;
     outline: 0;
 }
-.header--button.previous {
+.prev {
     margin-right: 10px;
 }
 
-#search {
+.search {
     position: relative;
     width: 40%;
-}
-
-#inputSearch {
-    width: 100%;
-    padding: 5px 44px;
-    padding-right: 10px;
-    font-size: 12px;
-    letter-spacing: 0.8px;
-    color: #eee;
-    outline: none;
-    border: 0;
-    border-radius: 24px;
-    background-color: var(--button-bg);
-    box-sizing: border-box;
+    input {
+        width: 100%;
+        padding: 5px 44px;
+        padding-right: 10px;
+        font-size: 12px;
+        letter-spacing: 0.8px;
+        color: #000;
+        outline: none;
+        border: 0;
+        border-radius: 24px;
+        background-color: #eee;
+        box-sizing: border-box;
+    }
 }
 
 #search-icon {
@@ -39,12 +41,11 @@
     cursor: pointer;
     padding: 0 5px;
 }
-
 #cog-icon {
     margin: 0 20px;
     color: var(--body-color);
 }
-.btnk {
+.dntClick_btn {
     background-color: #0084ff;
     border: none;
     color: white;
@@ -88,9 +89,8 @@
     background-color: var(--theme-bg);
     border-radius: 5px;
     // box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.5);
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, 
-        rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
-        rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px,
+        rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     li {
         padding-left: 40px;
         font-size: 0.9rem;
@@ -126,8 +126,7 @@
     }
 }
 
-
-#sub-header{
+#sub-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -136,12 +135,14 @@
         font-weight: 600;
         letter-spacing: 0.7px;
         font-size: 17px;
-    } 
-    p{
+    }
+    button {
         color: #fff;
         font-size: 12px;
         font-weight: 600;
-    }   
+        background: transparent;
+        border: 0;
+    }
 }
 
 .title {
@@ -150,76 +151,7 @@
     color: #fff;
 }
 
-.section--body {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -16px;
-    margin-bottom: -16px;
-}
-
-.section--body--item {
-    position: relative;
-    z-index: 1;
+.testQ{
+    height: 350px;
     overflow: hidden;
-    border-radius: 10px;
-    margin-right: 16px;
-    margin-bottom: 16px;
-}
-
-.category--item {
-    width: 180px;
-    height: 180px;
-    background-color: rgb(245, 155, 35);
-}
-
-.category--item:before {
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 212, 255, 0) 100%);
-    z-index: -1;
-}
-
-.category--item a {
-    display: block;
-    height: 100%;
-    width: 100%;
-    color: #fff;
-    text-decoration: none;
-}
-
-.category--item a h3 {
-    margin: 0;
-    font-size: 18px;
-    font-weight: 600;
-    padding-top: 16px;
-    padding-left: 16px;
-}
-
-.category--item img {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    bottom: -5px;
-    right: -18px;
-    transform: rotate(25deg);
-    z-index: 0;
-    box-shadow: -1px 3px 2px 0px rgba(0, 0, 0, 0.1);
-}
-
-.section--body--item.section--body--item--lg.category--item {
-    width: 376px; /* (2 * normal section--item width) + 16px [margin-right: 16px] */
-    height: 220px;
-}
-
-.section--body--item.section--body--item--lg.category--item img {
-    width: 130px;
-    height: 130px;
-}
-
-.section--body--item.section--body--item--lg.category--item a h3 {
-    font-size: 2rem;
 }
