--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -2,9 +2,9 @@
     <div class="sidebar">
         <div class="logo pb-2">
             <img class="profile-img m-1"
-                src="https://imgix.bustle.com/inverse/30/73/24/3c/1222/490c/8172/20fc7e131358/chance-the-rapper-coloring-book-2-chainz-lil-wayne-download-mixtape.jpeg"
+                src="assets/image/staff-avatar-man.png"
                 alt="img" />
-            <h3 class="m-1">Aman Singh</h3>
+            <h3 class="m-1">Lauda Lahsun</h3>
             <p>Luova.studio7@gmail.com</p>
         </div>
         <div class="side-wrapper">
