--- a/src/app/shared/layout/layout-components/home-header/home-header.component.html
+++ b/src/app/shared/layout/layout-components/home-header/home-header.component.html
@@ -10,10 +10,10 @@
                 </button>
             </div>
 
-            <div id="search" class="ms-5">
+            <!-- <div id="search" class="ms-5">
                 <input id="search-box" type="search" name="search" placeholder="Search for song,artists etc..." />
                 <i id="search-icon" class="fa fa-search"></i>
-            </div>
+            </div> -->
         </div>
 
         <div id="right">
@@ -23,7 +23,7 @@
                     <li class="menu-item">
                         <i id="cog-icon" class="fa fa-cog"></i>
 
-                        <ul class="drop-menu">
+                        <!-- <ul class="drop-menu">
                             <li class="drop-menu-item">
                                 <a href="#">Page 1</a>
                             </li>
@@ -33,11 +33,12 @@
                             <li class="drop-menu-item">
                                 <a href="#">Page 3</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                 </ul>
             </div>
-            <button class="btnk">Don't Click here</button>
+            <button class="btnk btn">
+                Don't Click here</button>
         </div>
     </div>
 </header>
