--- a/src/app/shared/layout/layout-components/home-header/home-header.component.scss
+++ b/src/app/shared/layout/layout-components/home-header/home-header.component.scss
@@ -23,11 +23,11 @@
     padding-right: 10px;
     font-size: 12px;
     letter-spacing: 0.8px;
-    color: #eee;
+    color: #000;
     outline: none;
     border: 0;
     border-radius: 24px;
-    background-color: var(--button-bg);
+    background-color: #eee;
     box-sizing: border-box;
 }
 
