--- a/src/app/shared/layout/layout-structures/page-search-layout/page-search-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-search-layout/page-search-layout.component.html
@@ -4,9 +4,11 @@
         <div class="col-md-2 p-0 dashboard h-100 sticky-top">
             <app-dashboard></app-dashboard>
         </div>
-        <div class="col-md-10 py-3 home">
-            <!-- <app-home-header></app-home-header> -->
+        <div class="col-md-8 py-3 home">
             <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-2 disco pt-5">
+            Dummy Text..
         </div>
     </div>
 </div>
