--- a/src/app/shared/layout/layout-structures/page-search-layout/page-search-layout.component.scss
+++ b/src/app/shared/layout/layout-structures/page-search-layout/page-search-layout.component.scss
@@ -1,3 +1,6 @@
 .page_container{
-    background-color: var(--theme-bg);
+    background-color: #121212;
+    .disco{
+        background-color: #000;
+    }
 }
