--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 
 :root {
     --body-font: "Inter", sans-serif;
-    --theme-bg: #1f1d2b;
+    --theme-bg: #121212;
     --body-color: #808191;
     --button-bg: #353340;
     --border-color: rgb(128 129 145 / 24%);
