--- a/src/app/features/user/artist/page-artist-components/artist-top-track/artist-top-track.component.html
+++ b/src/app/features/user/artist/page-artist-components/artist-top-track/artist-top-track.component.html
@@ -7,7 +7,7 @@
             <p class="top-track-item__name">{{ topTrack.name }}</p>
         </div>
         <div class="top-track-item__player" *ngIf="play">
-            <iframe class="top-track-item__audio" [src]="topTrack.uri | uri" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe class="top-track-item__audio fixed-bottom" [src]="topTrack.uri | uri" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
     </div>    
     <div class="top-track-item__player-btn-container">
