--- a/src/app/features/user/search/page-search-components/search-artist-item/search-artist-item.component.scss
+++ b/src/app/features/user/search/page-search-components/search-artist-item/search-artist-item.component.scss
@@ -1,163 +1,83 @@
-// SCSS Variables
-$layout_bp_mobile: 360px;
-$layout_bp_tablet: 800px;
-$layout_bp_desktop: 1000px;
-
-$dark-gray: #282828;
-$light-gray: #b3b3b3;
-$black: black;
-
-// SCSS Mixins
-@mixin tablet {
-  @media only screen and (min-width: $layout_bp_tablet) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media only screen and (min-width: $layout_bp_desktop) {
-    @content;
-  }
-}
-
-// SCSS Styles
-
-.section--body--item {
-  position: relative;
-  z-index: 1;
+.card {
+  display: inline-block;
+  max-height: 270px;
+  min-height: 270px;
+  // width: 270px;
+  border-radius: 4px;
+  padding: 16px;
   overflow: hidden;
-  border-radius: 10px;
-  margin-right: 16px;
-  margin-bottom: 16px;
+  background-color: #181818;
+  transition: background-color 0.4s;
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.card:hover {
+  background-color: #282828;
 }
 
-.category--item {
-  width: 180px;
-  height: 180px;
-  background-color: rgb(245, 155, 35);
+.cover {
+  position: relative;
+  margin-bottom: 18px;
 }
-.search-artist-item {    
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-
-    background-color: $dark-gray;
-    // border: 2px solid red;
-
-    @include desktop {
-      width: 166px;
-      height: 240px;
-
-      margin-right: 15px;
-      cursor: pointer;
-    }
-
-    &__img-container {
-      text-align: center;
-    }
-
-    &__img {
-        width: 120px;
-        border-radius: 50%;
-    }   
-
-    &__title-container {
-      padding-left: 20px;
-    }
-    
-    &__title {
-      margin-top: 20px;
-      margin-bottom: 15px;
-
-      font-size: 18px;
-
-      @include desktop {
-        font-size: 15px;
-      }
-    }
-
-    &__bottom-container {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-
-      align-items: baseline;
-    }
-
-    &__artist {
-      margin-right: 5px;
-
-      @include desktop {
-        font-size: 11px;
-      }
-    }
-
-    &__type-container {
-      margin-left: 10px;
-    }
-
-    &__type {
-      margin: 0px;
-      padding: 5px 10px 5px 10px;
-
-      letter-spacing: 2px;
-      font-weight: 500;
-
-      @include desktop {
-        font-size: 11px;
-      }
-    }
-}
-
-
-.card_container{
-  max-width:200px;
+.cover img {
+  display: block;
   width: 100%;
-  height: 180px;
-  background-color: transparent;
-  border-radius: 10px;
-  border: 0;
-  img{
-      border-radius: 5px;
-      box-shadow: 0 12px 16px 0  rgb(0,0,0,0.13);
-      transition: all 0.3s;
-  }
-  .card-title{
-      font-size: small;
-      font-weight: 700;
-      color: var(--body-color);
-  }
-}
-.play_btn{
-position: absolute;
-  padding: 10px 12px;
-  z-index: 2;
-  top: 90px;
-  display: none;
-  left: 90px;
-  border: 0;
+  box-shadow: 0 8px 20px -4px hsl(0, 0%, 5%);
   border-radius: 50%;
-  background-color: #ece9e6;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  // animation: fadeIn linear 500ms;
-  svg{
-      font-size: 22px;
-      color: #f12711;
-  }
-}
-.card_container:hover {
-  img{
-      transform: scale(1.1,1.1);
-  }
-  .play_btn{
-      display: block;
-  }
-  .play_btn:hover {
-      transform: scale(1.1);
-  }
 }
 
-@keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+.play-icon {
+  position: absolute;
+  bottom: -2px;
+  right: 6px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #fafafa;
+  background-color: #1db954;
+  box-shadow: 0 4px 16px -4px #121212;
+  opacity: 0;
+  transition: 0.4s, transform 0.1s;
+}
+.play-icon:hover {
+  transform: scale(1.1);
+}
+.card:hover .play-icon {
+  bottom: 6px;
+  opacity: 1;
+}
+
+.fa-play {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 52%;
+  top: 50%;
+  font-size: 1rem;
+}
+
+.card-content {
+  font-family: "Montserrat", sans-serif;
+  color: #fafafa;
+}
+.card-content  {
+  h4{
+  margin-bottom: 6px; }
+  a {
+    font-size: 16px;
+    text-decoration: none;
+    color: inherit;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    height: 2.5em;
+    font-size: 14px;
+    color: hsl(0, 0%, 70%);
+  }
 }
