--- a/src/app/features/user/search/page-search/page-search.component.html
+++ b/src/app/features/user/search/page-search/page-search.component.html
@@ -1,149 +1,109 @@
-<header>
-    <div id="topbar">
-        <div class="header w-75 d-flex">
-            <div class="header--buttons">
-                <button class="header--button previous" [routerLink]="['/user/home']">
-                    <i class="fa fa-angle-left"></i>
-                </button>
-                <button class="header--button next">
-                    <i class="fa fa-angle-right"></i>
-                </button>
-            </div>
+<div class="searchPage-container">
+    <header>
+        <div id="topbar">
+            <div class="header w-75 d-flex">
+                <div>
+                    <button class="nav_btn prev" [routerLink]="['/user/home']">
+                        <i class="fa fa-angle-left"></i>
+                    </button>
+                    <button class="nav_btn">                  
+                             <i class="fa fa-angle-right"></i>
+                    </button>
+                </div>
 
-            <div id="search" class="ms-5">
-                <input id="inputSearch" type="search" name="search" (keyup)="search(searchTerm.value)"
-                    (keydown.backspace)="search(searchTerm.value)" #searchTerm
-                    placeholder="Search for song,artists etc..." />
-                <i id="search-icon" class="fa fa-search"></i>
-            </div>
-        </div>
-
-        <div id="right">
-            <i class="fa fa-bell"></i>
-            <div class="menu-wrap">
-                <ul class="menu">
-                    <li class="menu-item">
-                        <i id="cog-icon" class="fa fa-cog"></i>
-
-                        <ul class="drop-menu">
-                            <li class="drop-menu-item">
-                                <a href="#">Page 1</a>
-                            </li>
-                            <li class="drop-menu-item">
-                                <a href="#">Page 2</a>
-                            </li>
-                            <li class="drop-menu-item">
-                                <a href="#">Page 3</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <button class="btnk">Don't Click here</button>
-        </div>
-    </div>
-</header>
-
-<!-- 
-<section class="section">
-    <h2 class="title">Your top genres</h2>
-    <div class="section--body">
-        <div class="section--body--item section--body--item--lg category--item">
-            <a href="#">
-                <h3>Hip Hop</h3>
-                <img src="http://via.placeholder.com/150x150" alt="">
-            </a>
-        </div>
-        <div class="section--body--item section--body--item--lg category--item">
-            <a href="#">
-                <h3>Bollywood</h3>
-                <img src="http://via.placeholder.com/150x150" alt="">
-            </a>
-        </div>
-    </div>
-</section> -->
-<!-- <section class="section">
-    <h2 class="title">Browse all</h2>
-    <div class="section--body">
-        <div class="section--body--item category--item">
-            <a href="#">
-                <h3>Made For You</h3>
-                <img src="http://via.placeholder.com/150x150" alt="">
-            </a>
-        </div>
-
-        <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
-            <a href="#">
-                <h3>New Releases</h3>
-                <img src="assets/image/hindi-party/bollywood-rock.jpeg" alt="">
-            </a>
-        </div>
-
-        <div class="section--body--item category--item" style="background-color: rgb(160, 195, 210);">
-            <a href="#">
-                <h3>Discover</h3>
-                <img src="http://via.placeholder.com/150x150" alt="">
-            </a>
-        </div>
-    </div>
-</section> -->
-
-
-
-<section class="search-section">
-    <div class="search-section__search-item-container">
-        <div class="search-section__artists-container mt-3"
-            [ngClass]="moreArtists ? 'show' : 'search-section__artists-container--hide'" *ngIf="artistsList.length > 0">
-            <div id="sub-header" class=" m-0">
-                <h3 class="search-section__title ms-1">Artist</h3>
-                <div class="d-flex">
-                    <span class="me-2">
-                        <p> SEE ALL</p>
-                    </span>
+                <div id="search" class=" search ms-5">
+                    <input id="inputSearch" type="search" name="search" (keyup)="search(searchTerm.value)"
+                        (keydown.backspace)="search(searchTerm.value)" #searchTerm
+                        placeholder="Search for song,artists etc..." />
+                    <i id="search-icon" class="fa fa-search"></i>
                 </div>
             </div>
-            <!-- <button class="btn-template search-section__btn" 
+
+            <div id="right">
+                <i class="fa fa-bell"></i>
+                <div class="menu-wrap">
+                    <ul class="menu">
+                        <li class="menu-item">
+                            <i id="cog-icon" class="fa fa-cog"></i>
+                            <!-- <ul class="drop-menu">
+                                <li class="drop-menu-item">
+                                    <a href="#">Page 1</a>
+                                </li>
+                                <li class="drop-menu-item">
+                                    <a href="#">Page 2</a>
+                                </li>
+                                <li class="drop-menu-item">
+                                    <a href="#">Page 3</a>
+                                </li>
+                            </ul> -->
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn dntClick_btn">
+                    Don't Click here
+                </button>
+            </div>
+        </div>
+    </header>
+    <section class="result-section">
+        <div class="search-section__search-item-container">
+            <div class="search-section__artists-container mt-3"
+                [ngClass]="moreArtists ? 'show' : 'search-section__artists-container--hide'"
+                *ngIf="artistsList.length > 0">
+                <div id="sub-header" class=" m-0">
+                    <h3 class="search-section__title ms-1">Artist</h3>
+                    <div class="">
+                        <button class="me-2 p-2" (click)="seeMoreArtists()">
+                            SEE ALL
+                        </button>
+                    </div>
+                </div>
+                <!-- <button class="btn-template search-section__btn" 
                 (click)="seeMoreArtists()">{{ "search.more-btn"}} 
             </button> -->
-            <div class="container p-0">
-                <div class="row ">
-                    <app-search-artist-item class="col-2 " [artist]="artist"
-                        *ngFor="let artist of artistsList; let i = index" [it]="i">
-                    </app-search-artist-item>
-                </div>
-            </div>
-        </div>
-        <div class="search-section__tracks-container"
-            [ngClass]="moreTracks ? 'show' : 'search-section__tracks-container--hide'" *ngIf="tracksList.length > 0">
-            <div class="search-section__title-container">
-                <div id="sub-header" class=" m-0">
-                    <h3 class="search-section__title ms-1">Songs</h3>
-                    <div class="d-flex">
-                        <span class="me-2">
-                            <p> SEE ALL</p>
-                        </span>
+                <div class="container-fluid testQ p-0">
+                    <div class="row">
+                        <app-search-artist-item class="col-3" [artist]="artist" [moreArtists]="moreArtists"
+                            *ngFor="let artist of artistsList; let i = index" [it]="i">
+                        </app-search-artist-item>
                     </div>
                 </div>
             </div>
-            <!-- <button class="btn-template search-section__btn" (click)="seeMoreTracks()">{{ "search.more-btn"}}</button> -->
-            <div class="search-section__search-item container p-0">
-                <div class="row">
-                    <app-search-track-item class="col-2" [track]="track" *ngFor="let track of tracksList; let iter = index" [it]="iter">
-                    </app-search-track-item>
+            <div class="search-section__tracks-container"
+                [ngClass]="moreTracks ? 'show' : 'search-section__tracks-container--hide'"
+                *ngIf="tracksList.length > 0">
+                <div class="search-section__title-container">
+                    <div id="sub-header" class=" m-0">
+                        <h3 class="search-section__title ms-1">Songs</h3>
+                        <div class="">
+                            <button class="me-2 p-2" (click)="seeMoreTracks()">
+                                SEE ALL
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- <button class="btn-template search-section__btn" (click)="seeMoreTracks()">{{ "search.more-btn"}}</button> -->
+                <div class="search-section__search-item container testX p-0">
+                    <div class="row">
+                        <app-search-track-item class="col-3" [track]="track" [moreTracks]="moreTracks"
+                            *ngFor="let track of tracksList; let iter = index" [it]="iter">
+                        </app-search-track-item>
+                    </div>
                 </div>
             </div>
+            <div class="search-section__float-btn-container" *ngIf="moreArtists || moreTracks">
+                <a class="float-btn" (click)="scrollTo('searchId')">
+                    <span class="fas fa-chevron-up float-btn-icon"></span>
+                </a>
+            </div>
         </div>
-        <div class="search-section__float-btn-container" *ngIf="moreArtists || moreTracks">
-            <a class="float-btn" (click)="scrollTo('searchId')">
-                <span class="fas fa-chevron-up float-btn-icon"></span>
-            </a>
-        </div>
-    </div>
-</section>
+    </section>
 
-<app-search-modal [(showModal)]="showModal">
-    <div class="modal-body">
-        <h4>{{ "modal.body"}}</h4>
-        <button class="btn-template search-section__btn" routerLink="/search">{{ "modal.search-btn" }}</button>
-    </div>
-</app-search-modal>
+    <app-search-modal [(showModal)]="showModal">
+        <div class="modal-body">
+            <h4>{{ "modal.body"}}</h4>
+            <button class="btn-template search-section__btn" routerLink="/search">{{ "modal.search-btn" }}</button>
+        </div>
+    </app-search-modal>
+    <!-- <app-page-playlist></app-page-playlist> -->
+</div>
