--- a/src/app/shared/global-components/music-card/music-card.component.html
+++ b/src/app/shared/global-components/music-card/music-card.component.html
@@ -1,5 +1,5 @@
 <div class="card card_container p-1">
-    <a class="stretched-link" routerLink="/user/album"></a>
+    <!-- <a class="stretched-link" routerLink="/user/album"></a> -->
     <img src=" {{urlpath}} " alt="img" />
     <button type="button" class="play_btn animate__animated animate__fadeInUp animate__delay-1 animate__faster">
         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
