--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.scss
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.scss
@@ -1,11 +1,11 @@
 .container {
-    background-color: var(--theme-bg);
+    background-color: #000;
     height: 100vh;
     display: flex;
     overflow: hidden;
     width: 100%;
     font-size: 15px;
-    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+    // box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
     position: relative;
 }
 
